# phylax

./: .gitignore  Cargo.toml  README  README.md  flake.nix
config/: phylax.toml
config/rules/: malware_download.toml  privilege_escalation.toml  ssh_brute_force.toml  suspicious_process.toml
crates/phylax-alerts/: Cargo.toml
crates/phylax-alerts/src/: config.rs  email.rs  lib.rs  webhook.rs
crates/phylax-collectors/: Cargo.toml
crates/phylax-collectors/src/: filesystem.rs  lib.rs  manager.rs  process.rs  ssh.rs
crates/phylax-common/: Cargo.toml
crates/phylax-common/src/: config.rs  error.rs  lib.rs  platform.rs
crates/phylax-engine/: Cargo.toml
crates/phylax-engine/src/: decision.rs  lib.rs  threat.rs
crates/phylax-events/: Cargo.toml
crates/phylax-events/src/: lib.rs  types.rs
crates/phylax-logging/: Cargo.toml
crates/phylax-logging/src/: config.rs  lib.rs
crates/phylax-platform/: Cargo.toml
crates/phylax-platform/src/: filesystem.rs  lib.rs  network.rs  process.rs  service.rs
crates/phylax-policy/: Cargo.toml
crates/phylax-policy/src/: config.rs  lib.rs
crates/phylax-responders/: Cargo.toml
crates/phylax-responders/src/: account.rs  file_quarantine.rs  ip_blocking.rs  lib.rs  manager.rs  process_termination.rs
crates/phylax-rules/: Cargo.toml
crates/phylax-rules/src/: evaluator.rs  lib.rs  loader.rs
crates/phylax-storage/: Cargo.toml
crates/phylax-storage/src/: lib.rs  models.rs  schema.rs
crates/phylaxctl/: Cargo.toml
crates/phylaxctl/src/: main.rs
crates/phylaxd/: Cargo.toml
crates/phylaxd/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build.rs  docs.rs  install.rs  lint.rs  main.rs  package.rs  test.rs  util.rs
