[package]
name = "phylax-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
phylax-common = { path = "../phylax-common" }
phylax-events = { path = "../phylax-events" }
phylax-rules = { path = "../phylax-rules" }
phylax-storage = { path = "../phylax-storage" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "macros"] }
crossbeam-channel = "0.5"