[package]
name = "phylax-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
phylax-common = { path = "../phylax-common" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.27"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_Security"] }