[package]
name = "phylax-policy"
version = "0.1.0"
edition = "2021"

[dependencies]
phylax-common = { path = "../phylax-common" }
phylax-engine = { path = "../phylax-engine" }
phylax-events = { path = "../phylax-events" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }