[package]
name = "phylax-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
phylax-common = { path = "../phylax-common" }
phylax-events = { path = "../phylax-events" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
glob = "0.3"
regex = "1.0"