[package]
name = "phylaxctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phylaxctl"
path = "src/main.rs"

[dependencies]
phylax-common = { path = "../phylax-common" }
phylax-storage = { path = "../phylax-storage" }
phylax-events = { path = "../phylax-events" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tabled = "0.14"
colored = "2.0"